SERVER-46216 The dropIndexes command should not hold the global lock throughout the duration of the command